--- a/percobaan1.html
+++ b/percobaan1.html
@@ -13,16 +13,16 @@
 <meta content="true" name="HandheldFriendly">
 <meta content="width" name="MobileOptimized">
 <meta content='#032b36' name='theme-color' />
-<link rel="preload" as="image" href="img/iconmodal777.webp" />
-<link rel="preload" as="image" href="img/banermodal777.webp" />
+<link rel="preload" as="image" href="https://leragecomics.pages.dev/img/iconmodal777.webp" />
+<link rel="preload" as="image" href="https://leragecomics.pages.dev/img/banermodal777.webp" />
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Modal777: Situs Slot Online Dengan Peluang Menang Besar">
 <meta name="twitter:description" content="Modal777 adalah situs slot terbaik tahun ini, dengan permainan tanpa settingan dan mempunyai peluang kemenangan besar.">
-<meta name="twitter:image:src" content="img/banermodal777.webp">
+<meta name="twitter:image:src" content="https://leragecomics.pages.dev/img/banermodal777.webp">
 <meta name="og:title" content="Modal777: Situs Slot Online Dengan Peluang Menang Besar">
 <meta name="og:description" content="Modal777 adalah situs slot terbaik tahun ini, dengan permainan tanpa settingan dan mempunyai peluang kemenangan besar.">
-<meta name="og:image" content="img/banermodal777.webp">
+<meta name="og:image" content="https://leragecomics.pages.dev/img/banermodal777.webp">
 <meta property="og:image:width" content="500">
 <meta property="og:image:height" content="50">
 <meta name="og:url" content="https://leragecomics.com/">
@@ -39,8 +39,8 @@
 <meta name="geo.country" content="ID">
 <meta name="geo.region" content="ID" />
 <meta name="tgn.nation" content="Indonesia">
-<link rel="shortcut icon" type="image/x-icon" href="img/iconmodal777.webp" />
-<link href='img/iconmodal777.webp' rel='icon' sizes='32x32' type='image/png' />
+<link rel="shortcut icon" type="image/x-icon" href="https://leragecomics.pages.dev/img/iconmodal777.webp" />
+<link href='https://leragecomics.pages.dev/img/iconmodal777.webp' rel='icon' sizes='32x32' type='image/png' />
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes  -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -486,7 +486,7 @@ a {
     <div class="header-mobile">
         <div class="mobile-logo">
             <a href="https://leragecomics.com/">
-                <amp-img src="img/logomodal777.webp" alt="logo Modal777" width="140" height="30" layout="intrinsic">
+                <amp-img src="https://leragecomics.pages.dev/img/logomodal777.webp" alt="logo Modal777" width="140" height="30" layout="intrinsic">
                 </amp-img>
             </a>
         </div>
@@ -506,7 +506,7 @@ a {
         <div class="home__slider">
             <amp-carousel  width="600" height="600"  layout="responsive" type="slides" autoplay delay="2000">
                                 <a href="https://rebrand.ly/modal777login" target="_blank" rel="nofollow noopener noreferrer">
-                    <amp-img src="img/banermodal777.webp"  width="600" height="600"  layout="responsive" alt="Modal777"></amp-img>
+                    <amp-img src="https://leragecomics.pages.dev/img/banermodal777.webp"  width="600" height="600"  layout="responsive" alt="Modal777"></amp-img>
                 </a>
             </amp-carousel>
         </div>
