--- a/percobaan1.html
+++ b/percobaan1.html
@@ -556,7 +556,7 @@ a {
             <div class="menu-games">
                 <a href="https://rebrand.ly/modal777login" target="_blank" rel="nofollow noopener noreferrer">
                     <div class="games-item">
-                        <amp-img src="img/olympus.webp" width="150" height="150" alt="Gates of Olympus"></amp-img>
+                        <amp-img src="https://leragecomics.pages.dev/img/olympus.webp" width="150" height="150" alt="Gates of Olympus"></amp-img>
                         <div class="game-border">
                             <div class="games-name">Gates of Olympus</div>
                         </div>
@@ -564,7 +564,7 @@ a {
                 </a>
                 <a href="https://rebrand.ly/modal777login" target="_blank" rel="nofollow noopener noreferrer">
                     <div class="games-item">
-                        <amp-img src="img/princess.webp" width="150" height="150" alt="Starlight Princess"></amp-img>
+                        <amp-img src="https://leragecomics.pages.dev/img/princess.webp" width="150" height="150" alt="Starlight Princess"></amp-img>
                         <div class="game-border">
                             <div class="games-name">Starlight Princess</div>
                         </div>
@@ -572,7 +572,7 @@ a {
                 </a>
                 <a href="https://rebrand.ly/modal777login" target="_blank" rel="nofollow noopener noreferrer">
                     <div class="games-item">
-                        <amp-img src="img/mahjongways2.webp" width="150" height="150" alt="Mahjong Ways 2"></amp-img>
+                        <amp-img src="https://leragecomics.pages.dev/img/mahjongways2.webp" width="150" height="150" alt="Mahjong Ways 2"></amp-img>
                         <div class="game-border">
                             <div class="games-name">Mahjong Ways 2</div>
                         </div>
@@ -580,7 +580,7 @@ a {
                 </a>
                 <a href="https://rebrand.ly/modal777login" target="_blank" rel="nofollow noopener noreferrer">
                     <div class="games-item">
-                        <amp-img src="img/mahjongwins3.webp" width="150" height="150" alt="Mahjong Wins 3"></amp-img>
+                        <amp-img src="https://leragecomics.pages.dev/img/mahjongwins3.webp" width="150" height="150" alt="Mahjong Wins 3"></amp-img>
                         <div class="game-border">
                             <div class="games-name">Mahjong Wins 3</div>
                         </div>
