--- a/percobaan1.html
+++ b/percobaan1.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="google-site-verification" content="RR64G0mvKnL2vf4EJMj8-2Vyndg6Bqr540QsxDnKn6o" />
 <title>Modal777: Situs Slot Online Dengan Peluang Menang Besar</title>
 <meta name="title" content="Modal777: Situs Slot Online Dengan Peluang Menang Besar">
 <meta name="description" content="Modal777 adalah situs slot terbaik tahun ini, dengan permainan tanpa settingan dan mempunyai peluang kemenangan besar." />
